--- a/index.html
+++ b/index.html
@@ -117,7 +117,23 @@
         <div class="container">
 
             <div class="project">
-                <img src="img/citas.png" alt="Proyecto 1">
+                <img src="img/chat-js.png" alt="Proyecto 0">
+                <h3>App - Live Chat JavaScript</h3>
+                <p>Proyecto con JS, Node, Express y mongoDB</p>
+                <a href="https://github.com/nathandb7/chat-javascript" class="code">Ver Codigo</a>
+                <a href="https://chat-javascript-r7if.onrender.com/">Ver Proyecto</a>
+            </div>
+
+            <div class="project">
+                <img src="img/emercado-ceibal.png" alt="Proyecto 0">
+                <h3>Web - e-mercado ceibal</h3>
+                <p>Proyecto con HTML, CSS, JS, Bootstrap</p>
+                <a href="https://github.com/nathandb7/emercado" class="code">Ver Codigo</a>
+                <a href="https://emercado-jap.netlify.app/">Ver Proyecto</a>
+            </div>
+
+            <div class="project">
+                <img src="img/citas.png" alt="Proyecto 2">
                 <h3>App - Seguimiento Pacientes Veterinaria</h3>
                 <p>Proyecto con React, Vite, Tailwind CSS, LocalStorage</p>
                 <a href="https://github.com/nathandb7/citas-react" class="code">Ver Codigo</a>
@@ -125,7 +141,7 @@
             </div>
 
             <div class="project">
-                <img src="img/criptos.png" alt="Proyecto 2">
+                <img src="img/criptos.png" alt="Proyecto 3">
                 <h3>App - Cotización de criptomonedas</h3>
                 <p>Proyecto con React, Vite, Styled Components, Custom Hooks</p>
                 <a href="https://github.com/nathandb7/criptos-react" class="code">Ver Codigo</a>
@@ -133,7 +149,7 @@
             </div>
 
             <div class="project">
-                <img src="img/festival.png" alt="Proyecto 3">
+                <img src="img/festival.png" alt="Proyecto 4">
                 <h3>Web - Promoción de evento</h3>
                 <p>Proyecto con HTML, SASS y Gulp</p>
                 <a href="https://github.com/nathandb7/Web-Festival" class="code">Ver Codigo</a>
@@ -141,7 +157,7 @@
             </div>
 
             <div class="project">
-                <img src="img/gastos.png" alt="Proyecto 4">
+                <img src="img/gastos.png" alt="Proyecto 5">
                 <h3>App - Control de Gastos</h3>
                 <p>Proyecto con React, Vite, LocalStorage</p>
                 <a href="https://github.com/nathandb7/control-gastos-react" class="code">Ver Codigo</a>
@@ -149,14 +165,14 @@
             </div>
 
             <div class="project">
-                <img src="img/bienesraices.png" alt="Proyecto php">
+                <img src="img/bienesraices.png" alt="Proyecto 6">
                 <h3>Sitio Web - Bienes Raices</h3>
                 <p>Sitio de bienes raices HTML, SASS, Gulp, PHP, MySql</p>
                 <a href="https://github.com/nathandb7/bienesraices" class="code">Ver Codigo</a>
             </div>
 
             <div class="project">
-                <img src="img/frontendstore.png" alt="Proyecto 6">
+                <img src="img/frontendstore.png" alt="Proyecto 7">
                 <h3>Sitio Web - Frond End Store</h3>
                 <p>Proyecto con HTML, CSS</p>
                 <a href="https://github.com/nathandb7/FrontEndStore" class="code">Ver Codigo</a>
@@ -164,25 +180,17 @@
             </div>
 
             <div class="project">
-                <img src="img/nimbus.png" alt="Proyecto 7">
+                <img src="img/nimbus.png" alt="Proyecto 8">
                 <h3>Sitio Web - Nimbus</h3>
                 <p>Proyecto con Wordpress</p>
                 <a href="https://nimbussinlimites.com/">Ver Proyecto</a>
             </div>
 
             <div class="project">
-                <img src="img/blog.png" alt="Proyecto 8">
+                <img src="img/blog.png" alt="Proyecto 9">
                 <h3>Sitio Web - Blog Neozix</h3>
                 <p>Proyecto con Wordpress</p>
                 <a href="https://neozix.com/">Ver Proyecto</a>
-            </div>
-
-            <div class="project">
-                <img src="img/chat-js.png" alt="Proyecto JS">
-                <h3>App - Live Chat JavaScript</h3>
-                <p>Proyecto con JS, Node, Express y mongoDB</p>
-                <a href="https://github.com/nathandb7/chat-javascript" class="code">Ver Codigo</a>
-                <a href="https://chat-javascript-r7if.onrender.com/">Ver Proyecto</a>
             </div>
 
         </div>
